--- a/styles/main.css
+++ b/styles/main.css
@@ -9,7 +9,8 @@ html {
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 800px;
+    width: 98%;
+	max-width: 960px;
     margin: 0 auto;
     border: 3px solid #931420;
     background-color: #fffded;
@@ -54,10 +55,10 @@ header img {
 }
 #nav_menu ul li {
 	float: left;
+	width: 20%;
 }
 #nav_menu ul li a {
 	display: block;
-	width: 160px;
 	text-align: center;
 	padding: 1em 0;
 	text-decoration: none;
@@ -69,6 +70,7 @@ header img {
 	color: yellow;
 }
 #nav_menu ul ul {
+	width: 100%;
 	display: none;
 	position: absolute;
 	top: 100%;
@@ -84,10 +86,12 @@ header img {
     clear: both;
     display: block;
 }
-
+main {
+	clear: left;
+}
 /* the styles for the section */
 section {
-	width: 525px;
+	width: 65.625%;
 	float: right;
 	padding: 0 20px 20px 20px;
 }
@@ -130,13 +134,15 @@ article h3 {
 }
 article img {
 	float: right;
+	max-width: 40%;
+	min-width: 150px;
 	margin: .5em 0 1em 1em;
 	border: 1px solid black;
 }
 
 /* the styles for the aside */
 aside {
-	width: 215px;
+	width: 26.875%;
 	float: right;
 	padding: 0 0 20px 20px;
 }
@@ -163,4 +169,57 @@ footer p {
 	text-align: center;
 	color: white;
 	padding: 1em 0;
+}
+#mobile_menu {
+	display: none;
+}
+
+/* tablet portrait to standard 960 */
+@media only screen and (max-width: 959px) {
+	section h1 { font-size: 135%; }
+	section h2, aside h2 { font-size: 120%; }
+	#nav_menu {
+		display: block;
+	}
+	#mobile_menu {
+		display: none;
+	}
+	.slicknav_menu {
+		background-color: #800000 !important; 
+	}
+}
+
+/* mobile landscape to tablet portrait */
+@media only screen and (max-width: 767px) {
+	header img { float: none; }
+	header { text-align: center; }
+	section {
+		float: none;
+		width: 95%;
+	}
+	aside {
+		float: none;
+		padding-right: 2.5%;
+		width: 95%;
+	}
+	article img { max-width: 30%; }
+	#speakers {
+		-moz-column-count: 2;
+		-webkit-column-count: 2;
+		column-count: 2;
+	}
+	#nav_menu {
+		display: none;
+	}
+	#mobile_menu {
+		display: block;
+	}
+	.slicknav_menu {
+		background-color: #800000 !important;
+	}
+}
+
+/* mobile portrait to mobile landscape */
+@media only screen and (max-width: 479px) {
+	body { font-size: 90%; }
 }
